* add api for user sign
