# server/api/dic.go
@@ -7,8 +7,8 @@ import (
 
 // register to main echo Group
 
-// "/api/dictionary"
-func Handler(r *echo.Group) {
+// "/api/dictionary/pub"
+func DicPubHandler(r *echo.Group) {
 
 	var mGET = map[string]echo.HandlerFunc{
 		"/items/:itemType": dic.Items,
@@ -19,6 +19,50 @@ func Handler(r *echo.Group) {
 		"/search":          dic.FullTextSearch,
 		"/kind":            dic.CheckItemKind,
 	}
+	var mPOST = map[string]echo.HandlerFunc{}
+	var mPUT = map[string]echo.HandlerFunc{}
+	var mDELETE = map[string]echo.HandlerFunc{}
+	var mPATCH = map[string]echo.HandlerFunc{}
+
+	// ------------------------------------------------------- //
+
+	methods := []string{"GET", "POST", "PUT", "DELETE", "PATCH"}
+
+	mRegAPIs := map[string]map[string]echo.HandlerFunc{
+		"GET":    mGET,
+		"POST":   mPOST,
+		"PUT":    mPUT,
+		"DELETE": mDELETE,
+		"PATCH":  mPATCH,
+		// others...
+	}
+
+	mRegMethod := map[string]func(path string, h echo.HandlerFunc, m ...echo.MiddlewareFunc) *echo.Route{
+		"GET":    r.GET,
+		"POST":   r.POST,
+		"PUT":    r.PUT,
+		"DELETE": r.DELETE,
+		"PATCH":  r.PATCH,
+		// others...
+	}
+
+	for _, m := range methods {
+		mAPI, method := mRegAPIs[m], mRegMethod[m]
+		for path, handler := range mAPI {
+			if handler == nil {
+				continue
+			}
+			method(path, handler)
+		}
+	}
+}
+
+// ------------------------------------------------------ //
+
+// "/api/dictionary/auth"
+func DicAuthHandler(r *echo.Group) {
+
+	var mGET = map[string]echo.HandlerFunc{}
 	var mPOST = map[string]echo.HandlerFunc{
 		"/upsert": dic.Upsert,
 	}
